updating our h1 tag with our name

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am a Flooring Supervisor at the moment, but I'm ready to start my journey in becoming a Software Engineer</p>
+      <p>I am a Flooring Supervisor at the moment, but I'm ready to start my journey in becoming a Software Engineer.</p>
       <h1>Where I'm From</h1>
-      <p>Paterson, NJ</p>
+      <p>Paterson, NJ.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I enjoy spending time with my family, watching movies and playing online video games</p>
+      <p>I enjoy spending time with my family, watching movies and playing online video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Professional Software Engineer</p>
+      <p>Professional Software Engineer.</p>
       <h1>Where do you live?</h1>
-      <p>Davenport, FL</p>
+      <p>Davenport, FL.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Computors are still the future and I dont want to get left behind more than I already have. Most importantly, I'm doing this for myself and family. </p>
+      <p>Computors are still the future and I don't want to get left behind more than I already have. Most importantly, I'm doing this for myself and family. </p>
     </section>
 
     <footer id="footer">
